fix: fixed title overflow on small devices

--- a/frontend/src/components/authSection/AuthSection.css
+++ b/frontend/src/components/authSection/AuthSection.css
@@ -5,17 +5,21 @@
     margin-top: 4rem;
 }
 
-@media screen and (max-width:700px) {
-    .AuthSection {
-        margin-top: 2rem;
-    }
-}
-
 .AuthSection .authSectionTitle {
     font-family: 'Michroma', 'sans serif';
     font-size: 4rem;
     font-weight: 400;
     margin-bottom: 2rem;
+}
+
+@media screen and (max-width:700px) {
+    .AuthSection {
+        margin-top: 2rem;
+    }
+
+    .AuthSection .authSectionTitle {
+        font-size: 2.5rem;
+    }
 }
 
 .AuthSection .authLinks {
